--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-#DEV ENVIRONEMNT SETTING#
+# Development properties
 
-app.message= This is the property file for the ${spring.application.name} specific to DEV Environment
+app.message= This is the property file for the ${spring.application.name} application specific to DEVELOPMENT Environment.
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
