--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-server.port=15000
-#PROD ENVIRONEMNT SETTING#
+#Production properties
 
-app.message= This is the property file for the ${spring.application.name} specific to PRODUCTION Environment!! Be ALERT!! 
+server.port=15000
+app.message= This is the property file for the ${spring.application.name} application specific to the PRODUCTION Environment!! Be ALERT!! 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql-instance100.sovanmaws.us-east-1.rds.amazonaws.com:3306/profiles
