--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+#Default properties
+
 server.port=9090
-spring.profiles.active=
-spring.application.name=Profiles
-app.message=This is the primary Application Property for ${spring.application.name} 
+spring.profiles.active=prod
+spring.application.name=Spring Profiles
+app.message=This is the primary application property for the ${spring.application.name} application specific to the DEFAULT environment.
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
