--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Default properties
 
 server.port=9090
-spring.profiles.active=prod
+spring.profiles.active=
 spring.application.name=Spring Profiles
 app.message=This is the primary application property for the ${spring.application.name} application specific to the DEFAULT environment.
 
